--- a/app/src/main/res/layout/fragment_cabinet.xml
+++ b/app/src/main/res/layout/fragment_cabinet.xml
@@ -2,20 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
+    android:id="@+id/layoutCabinet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CabinetFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="yeah cabinet"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include layout="@layout/fragment_cabinet_anon" />
+    <include layout="@layout/fragment_cabinet_deanon" android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
