--- a/app/src/main/res/navigation/muzkat_nav.xml
+++ b/app/src/main/res/navigation/muzkat_nav.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/cabinetFragment"
         android:name="com.example.muzkat.CabinetFragment"
-        android:label="fragment_cabinet"
+        android:label="@string/cab_frag_name"
         tools:layout="@layout/fragment_cabinet" >
         <action
             android:id="@+id/action_cabinetFragment_to_musicFragment"
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/musicFragment"
         android:name="com.example.muzkat.MusicFragment"
-        android:label="fragment_music"
+        android:label="@string/mus_frag_name"
         tools:layout="@layout/fragment_music" >
         <action
             android:id="@+id/action_musicFragment_to_cabinetFragment"
