--- a/app/src/main/res/layout/genre_list_item.xml
+++ b/app/src/main/res/layout/genre_list_item.xml
@@ -19,13 +19,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <ImageButton
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_weight="1"
-            android:id="@+id/bRemoveAuthor"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@android:drawable/ic_delete"
-            android:contentDescription="@string/del" />
+            android:layout_height="match_parent">
+            <ImageButton
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/bRemoveGenre"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@android:drawable/ic_delete"
+                android:contentDescription="@string/del" />
+
+            <ProgressBar
+                android:visibility="gone"
+                android:id="@+id/pbLoading"
+                app:layout_constraintStart_toStartOf="@id/bRemoveGenre"
+                app:layout_constraintTop_toTopOf="@id/bRemoveGenre"
+                android:indeterminate="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
