added paging abilities, loading placeholders and fixed warning

--- a/app/src/main/res/layout/activity_add_fav_author.xml
+++ b/app/src/main/res/layout/activity_add_fav_author.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content" />
 
     <ProgressBar
-        android:id="@+id/pbLoading"
+        android:id="@+id/pbLoadingAddAuthor"
         android:visibility="gone"
         android:indeterminate="true"
         android:padding="16dp"
