--- a/app/src/main/res/layout/genre_list_item.xml
+++ b/app/src/main/res/layout/genre_list_item.xml
@@ -34,7 +34,7 @@
 
             <ProgressBar
                 android:visibility="gone"
-                android:id="@+id/pbLoading"
+                android:id="@+id/pbLoadingRemGenre"
                 app:layout_constraintStart_toStartOf="@id/bRemoveGenre"
                 app:layout_constraintTop_toTopOf="@id/bRemoveGenre"
                 android:indeterminate="true"
