fixed black theme; added some video-reviews

--- a/app/src/main/res/layout/music_list_item.xml
+++ b/app/src/main/res/layout/music_list_item.xml
@@ -14,8 +14,7 @@
         android:id="@+id/tvMusicName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Music"
-        android:textColor="@color/black"
+        android:text="@string/music"
         android:textSize="10pt"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,9 +24,7 @@
         android:id="@+id/tvAuthorName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:text="Author"
-        android:textColor="@color/black"
+        android:text="@string/author"
         android:textSize="10pt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvMusicName" />
@@ -36,8 +33,7 @@
         android:id="@+id/tvGenreName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Genre"
-        android:textColor="#888"
+        android:text="@string/genre"
         android:textSize="8pt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvAuthorName"
